--- a/VoxVisio/VoxVisio/Properties/Resources.resx
+++ b/VoxVisio/VoxVisio/Properties/Resources.resx
@@ -131,6 +131,6 @@
     <value>..\Resources\Images\Icons\VoxLogo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Commands" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Commands\Commands.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+    <value>..\Resources\settings\Commands.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
 </root>
